feat: buttons wip

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h1 id="me-title">Olá, </br>eu sou o Eduardo Fidelis</h1>
         <h2 id="me-description">Desenvolvedor full-stack</h2>
         <div id="me-buttons">
-            <button>Download CV</button>
-            <button>Entrar em contato</button>
+            <button class="me-buttom" id="download-cv-buttom">Download CV</button>
+            <button class="me-buttom" id="contact-buttom">Entrar em contato</button>
         </div>
     </section>
     
